tests/negative/typecheck/sum_expr.orng
// sum_expr.orng:6:20: error: invalid sum expression, must be annotation or identifier
//     let x: (y | z + 3)
//                   ^
// 
fn main() -> Int {
    let x: (y | z + 3)
    4
}